--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ CODEX_MODEL=gpt-5-codex
 # Server Configuration
 PORT=3000
 TRIGGER_KEYWORD=/code
+
+# Security Configuration (Optional)
+# Comma-separated list of tools to disallow (e.g., dangerous commands)
+# Example: DISALLOWED_TOOLS="Bash(rm:*),Bash(sudo:*),Bash(dd:*),Bash(mkfs:*)"
+DISALLOWED_TOOLS=
