--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ PROVIDER=claude
 # Claude API Configuration
 ANTHROPIC_API_KEY=sk-ant-xxx
 CLAUDE_MODEL=claude-3-5-sonnet-20241022
+#ANTHROPIC_BASE_URL=
+
 
 # Codex/OpenAI API Configuration
 OPENAI_API_KEY=sk-xxx
