feat: stabilize clone/push and enhance PR link UX
- clone: use --depth=1 and --single-branch for gh clone
- executor: add small backoff retry for git push; error hints for diagnostics
- webhook: optional permission override via ALLOW_ALL_USERS/PERMISSION_MODE
- docs: add multi-turn usage, debug envs; update compare PR links (quick_pull)
- tests: add push-retry, permission override, PR link params, and hint mapping

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,14 @@ TRIGGER_KEYWORD=/code
 # Comma-separated list of tools to disallow (e.g., dangerous commands)
 # Example: DISALLOWED_TOOLS="Bash(rm:*),Bash(sudo:*),Bash(dd:*),Bash(mkfs:*)"
 DISALLOWED_TOOLS=
+
+# Debugging (Optional)
+# Enable detailed provider parsing logs and git change detection logs
+# DEBUG_CLAUDE_PARSING=true
+# DEBUG_GIT_DETECTION=true
+
+# Permission Overrides (Optional; use with care)
+# When true, bypass installer-only check and allow any user to trigger.
+# In production, prefer leave unset or false.
+# ALLOW_ALL_USERS=false
+# Alternative: set PERMISSION_MODE=open to allow all users.
